# QtTypicalTools

./: .gitignore  CMakeLists.txt  CMakeUserPresets.json  CMake构建配置.bat  README.md
TypicalTools/: CMakeLists.txt  License.txt  main.qml
TypicalTools/include/: Settings.h  ShellConfig.h  ShellConfigModel.h
TypicalTools/include/TypicalTool/: Tool.h
TypicalTools/include/TypicalTool/Tool/: ConfigFileTextManage.h  FileManage.h  Json_Typical.h  Languages.h  Log.h  StringManage.h  Tchar_Typical.h  Time_Typical.h  WindowHost.h  pch.h
TypicalTools/lib/TypicalTool/Debug_Win/: TypicalTool.lib
TypicalTools/lib/TypicalTool/Release_Win/: TypicalTool.lib
TypicalTools/resource/: main.qml
TypicalTools/src/: Settings.cpp  ShellConfig.cpp  ShellConfigModel.cpp  main.cpp
